--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start": "export $(cat .env | xargs) && node dist/main.js",
     "build": "(rm -rf dist || npx rimraf dist) && tsc -p tsconfig.json",
     "dev": "export $(cat .env | xargs) && ts-node src/main.ts",
-    "create": "ts-node ./node_modules/.bin/typeorm migration:create -d src/migrations -n"
+    "create": "ts-node ./node_modules/.bin/typeorm migration:create -d src/migrations -n",
+    "audit": "npm audit | grep 'found' | grep -E 'moderate|high|critical' && exit 1 || exit 0",
+    "lint_ci": "tslint 'src/**/*.ts'",
+    "lint_staged": "tslint",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -39,6 +43,8 @@
   "devDependencies": {
     "@types/node": "^14.18.9",
     "@types/validator": "^13.7.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
