--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "create": "ts-node ./node_modules/.bin/typeorm migration:create -d src/migrations -n",
     "audit": "npm audit | grep 'found' | grep -E 'moderate|high|critical' && exit 1 || exit 0",
     "lint_ci": "tslint 'src/**/*.ts'",
-    "lint_staged": "tslint",
+    "lint": "tslint",
+    "lint_staged": "lint-staged",
     "prepare": "husky install"
   },
   "repository": {
