--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "homepage": "https://github.com/DalyTelecom/daly-telecom-backend#readme",
   "dependencies": {
+    "@msgpack/msgpack": "^2.7.1",
     "@nestjs/common": "^8.2.6",
     "@nestjs/core": "^8.2.6",
     "@nestjs/platform-fastify": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
-    "cbor": "^8.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify-swagger": "^4.13.1",
@@ -41,7 +41,8 @@
     "mysql2": "^2.3.3",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "zstd-codec": "^0.1.4"
   },
   "devDependencies": {
     "@types/msgpack5": "^3.4.2",
