--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify-swagger": "^4.15.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "rxjs": "^7.5.4",
     "tslib": "^2.3.1",
