--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
   },
   "homepage": "https://github.com/DalyTelecom/daly-telecom-backend#readme",
   "dependencies": {
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/platform-fastify": "^8.4.7",
-    "@nestjs/swagger": "^5.2.1",
-    "@nestjs/typeorm": "^8.1.4",
+    "@fastify/static": "^6.4.0",
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/platform-fastify": "^9.0.3",
+    "@nestjs/swagger": "^6.0.4",
+    "@nestjs/typeorm": "^9.0.0",
     "argon2": "^0.28.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "fastify-swagger": "^4.17.1",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@types/node": "^14.18.21",
+    "@types/node": "^14.18.22",
     "@types/validator": "^13.7.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "ts-node": "^10.8.2",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   }
